Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29624

Memory leak on pushdown of a merged derived table

    XMLWordPrintable

Details

    Description

      Test case below to reproduce the bug using FederatedX engine.

      On the first server (remote, runs on 127.0.0.1 port 3310):

      CREATE DATABASE mdev;
      USE mdev;
      CREATE TABLE `t1` ( `a` int(11)) ENGINE=InnoDB;
      

      On the second server (local):

      CREATE TABLE `t1` ( `a` int(11)) ENGINE=FEDERATED CONNECTION='mysql://root@127.0.0.1:3310/mdev/t1'
       
      CREATE TABLE `t2` (`a` int(11)) ENGINE=InnoDB;
       
      SELECT * FROM t2, (SELECT * FROM t1 WHERE a > 3) dt WHERE t2.a=dt.a;
      

      Attachments

        Issue Links

          Activity

            People

              oleg.smirnov Oleg Smirnov
              oleg.smirnov Oleg Smirnov
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4d 5.5h
                  4d 5.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.